Fix[about]: Remove overflow y scroll

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -26,7 +26,6 @@
   .about--right-container {
     width: 50%;
     margin-left: 855px;
-    overflow-y: scroll;
     right: 0;
     height: 100%;
     margin-bottom: 91px;
